# armadillo

./: .codecov.yml  .gitattributes  .lgtm.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
Notebooks/: Pi_stack_nb.ipynb  Tau_simulation.ipynb
Notebooks/Inputs/: tau_mol.mol
armadillo/: __init__.py  _version.py  armadillo.py
armadillo/data/: files.py
armadillo/tests/: conftest.py  test_armadillo.py  test_find_all_rings.py  test_find_pi_stacking_rings.py  test_functions.py  test_normal_vector.py  test_pi_stacking-individual.py  test_ring_distance.py  test_ring_normal_angle.py  test_unit_vector.py
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
