[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "armadillo"
description = "pi stacking project"
license = {file = "LICENSE" }
authors = [
    {name = "Tristan S Jones", email = "tristan.stephens-jones@kcl.ac.uk"},
]
maintainers = [
    {name = "Tristan S Jones", email = "tristan.stephens-jones@kcl.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/TristanSJones/armadillo"
# documentation = "https://armadillo.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "armadillo/tests",
]
